--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,9 +4,7 @@
 /*:root -> 获取根元素html*/
 :root {
   --color-text: #666;
-  --color-high-text: #ff5000;
-  --color-tint: #ff9500;
-  --color-background: #fff;
+  --color-bg: #efefef;
   --font-size: 14px;
   --line-height: 1.5;
 }
@@ -23,7 +21,6 @@ a {
   color: var(--color-text);
   text-decoration: none;
 }
-
 
 .clear-fix::after {
   clear: both;
